# ruffle

./: Cargo.toml
.github/workflows/: mhc.yml
core/: Cargo.toml
core/src/: external.rs  player.rs
core/src/avm2/globals/flash/net/: shared_object.rs
core/src/display_object/: stage.rs
desktop/: Cargo.toml
desktop/assets/: favicon-32.rgba  ruffle_desktop.rc
desktop/is_wine/src/: lib.rs
desktop/src/: app.rs  cli.rs  custom_event.rs  player.rs  preferences.rs  util.rs
desktop/src/backends/: fscommand.rs  navigator.rs
desktop/src/preferences/: storage.rs
desktop/steamworks/: Achievement.as  Client.as  LocalPlayer.as  Utils.as
frontend-utils/src/backends/: storage.rs
render/gles/: Cargo.toml
render/gles/src/: lib.rs
render/wgpu/src/context3d/: shader_pair.rs
